<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/cityNameDialogFragment_heading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/weatherApp_dialog_Fragment_city_name_heading"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_marginTop="@dimen/guidelines_margin_padding_16dp"
                android:layout_marginStart="@dimen/guidelines_margin_padding_16dp"
                android:layout_marginEnd="@dimen/guidelines_margin_padding_16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintBottom_toTopOf="@id/cityNameDialogFragment_input_data"
                app:layout_constraintVertical_chainStyle="packed"/>

            <EditText
                android:id="@+id/cityNameDialogFragment_input_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:hint="@string/weatherApp_dialog_Fragment_city_name_edit_text_hint"
                android:inputType="text"
                android:layout_marginTop="@dimen/guidelines_margin_padding_16dp"
                android:layout_marginStart="@dimen/guidelines_margin_padding_16dp"
                android:layout_marginEnd="@dimen/guidelines_margin_padding_16dp"
                android:layout_marginBottom="@dimen/guidelines_margin_padding_16dp"
                app:layout_constraintTop_toBottomOf="@id/cityNameDialogFragment_heading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/cityNameDialogFragment_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/weatherApp_dialog_Fragment_city_name_cancel_button"
                app:layout_constraintTop_toBottomOf="@id/cityNameDialogFragment_input_data"
                android:layout_marginTop="@dimen/guidelines_margin_padding_16dp"
                android:layout_marginEnd="@dimen/guidelines_margin_padding_16dp"
                android:layout_marginBottom="@dimen/guidelines_margin_padding_16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintEnd_toStartOf="@id/cityNameDialogFragment_change_button"
                app:layout_constraintHorizontal_chainStyle="packed"/>

            <Button
                android:id="@+id/cityNameDialogFragment_change_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/weatherApp_dialog_Fragment_city_name_change_button"
                android:layout_marginTop="@dimen/guidelines_margin_padding_16dp"
                android:layout_marginBottom="@dimen/guidelines_margin_padding_16dp"
                android:layout_marginEnd="@dimen/guidelines_margin_padding_16dp"
                app:layout_constraintTop_toBottomOf="@id/cityNameDialogFragment_input_data"
                app:layout_constraintStart_toEndOf="@id/cityNameDialogFragment_cancel_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>