<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weather_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scrollView">

        <Button
            style="@style/Widget.AppCompat.Button.Small"
            android:id="@+id/show_current_weather_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weatherApp_main_activity_current_weather_button"
            android:layout_marginTop="@dimen/guidelines_margin_padding_16dp"
            android:layout_marginStart="@dimen/guidelines_margin_padding_16dp"
            android:layout_marginBottom="@dimen/guidelines_margin_padding_16dp"
            android:layout_marginEnd="@dimen/guidelines_margin_padding_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintHeight="match_constraint"
        app:layout_constraintTop_toBottomOf="@id/weather_buttons_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/weather_forecast_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constrainedHeight="true"
            app:layout_constraintTop_toBottomOf="@id/weather_buttons_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/weather_hourly_forecast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/guidelines_margin_padding_16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/weather_five_days_three_hour_forecast">

                <TextView
                    android:id="@+id/weather_hourly_forecast_heading"
                    android:layout_width="0dp"
                    style="@style/DataHeading"
                    android:text="@string/weatherApp_main_activity_hourly_forecast_heading_text"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/weather_hourly_forecast_recyclerView"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/weather_hourly_forecast_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/weather_hourly_forecast_heading"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/weather_five_days_three_hour_forecast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/guidelines_margin_padding_16dp"
                app:layout_constraintTop_toBottomOf="@id/weather_hourly_forecast"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/weather_seven_days_weather_forecast">

                <TextView
                    android:id="@+id/weather_five_days_three_hour_forecast_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/DataHeading"
                    android:text="@string/weatherApp_main_activity_five_days_three_hours_forecast_heading_text"
                    android:textAlignment="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/weather_five_days_three_hour_forecast_recyclerView"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/weather_five_days_three_hour_forecast_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/weather_five_days_three_hour_forecast_heading"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/weather_seven_days_weather_forecast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/guidelines_margin_padding_16dp"
                android:layout_marginBottom="@dimen/guidelines_margin_padding_16dp"
                app:layout_constraintTop_toBottomOf="@id/weather_five_days_three_hour_forecast"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">


                <TextView
                    android:id="@+id/weather_seven_days_weather_forecast_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/DataHeading"
                    android:text="@string/weatherApp_main_activity_seven_days_forecast_heading_text"
                    android:textAlignment="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/weather_seven_days_weather_forecast_recyclerView"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/weather_seven_days_weather_forecast_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/weather_seven_days_weather_forecast_heading"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>